Added  Authentication with Identity

--- a/Noamooz.Web/appsettings.Development.json
+++ b/Noamooz.Web/appsettings.Development.json
@@ -1,6 +1,8 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=noamooz.site,14330;DataBase=NoamoozDB;User Id=noamooz;Trusted_Connection=False;Password=hmx508?8E;TrustServerCertificate=true;MultipleActiveResultSets=True;"
+    "DefaultConnection": "Server=noamooz.site,14330;DataBase=NoamoozDB;User Id=noamooz;Trusted_Connection=False;Password=hmx508?8E;TrustServerCertificate=true;MultipleActiveResultSets=True;",
+    "IdentityConnection": "Server=noamooz.site,14330;DataBase=noamooz_manage;User Id=noamoozmanage;Password=hmx508?8E;Trusted_Connection=False;TrustServerCertificate=true;MultipleActiveResultSets=True;"
+
   },
   "Logging": {
     "LogLevel": {
