--- a/Noamooz.Web/appsettings.json
+++ b/Noamooz.Web/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=noamooz.site,14330;DataBase=NoamoozDB;User Id=noamooz;Password=hmx508?8E;Trusted_Connection=False;TrustServerCertificate=true;MultipleActiveResultSets=True;"
+    "DefaultConnection": "Server=noamooz.site,14330;DataBase=NoamoozDB;User Id=noamooz;Password=hmx508?8E;Trusted_Connection=False;TrustServerCertificate=true;MultipleActiveResultSets=True;",
+    "IdentityConnection": "Server=noamooz.site,14330;DataBase=noamooz_manage;User Id=noamoozmanage;Password=hmx508?8E;Trusted_Connection=False;TrustServerCertificate=true;MultipleActiveResultSets=True;"
   },
   "Logging": {
     "LogLevel": {
